--- a/src/client/index.css
+++ b/src/client/index.css
@@ -14,3 +14,19 @@ body {
   font-size: 16px;
   font-weight: 400;
 }
+
+.o-layout {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.o-grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 24px;
+  width: 696px;
+}
